// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date > allows coercion on input 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/DateSchema",
    "definitions": {
        "DateSchema": {
            "anyOf": [
                {
                    "type": "string",
                    "pattern": "^date\\\\d{1,16}[+-]$",
                    "format": "date-time"
                },
                {
                    "type": "number"
                },
                {
                    "type": "string",
                    "format": "date"
                },
                {
                    "type": "string",
                    "format": "date-time"
                }
            ]
        }
    }
}"
`;

exports[`date > renders out mode pattern 1`] = `
"{
    "$schema": "http://json-schema.org/draft-07/schema#",
    "$ref": "#/definitions/DateSchema",
    "definitions": {
        "DateSchema": {
            "type": "string",
            "pattern": "^date\\\\d{1,16}[+-]$",
            "format": "date-time"
        }
    }
}"
`;
